Improve ArgoCD auto-sync configuration

--- a/apps/dev.yaml
+++ b/apps/dev.yaml
@@ -18,8 +18,11 @@ spec:
     automated:
       prune: true
       selfHeal: true
+      allowEmpty: false
     syncOptions:
       - CreateNamespace=true
+      - PrunePropagationPolicy=foreground
+      - PruneLast=true
     retry:
       limit: 5
       backoff:
